--- a/app/src/main/res/layout/activity_anime.xml
+++ b/app/src/main/res/layout/activity_anime.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.demotxt.myapp.myapplication.activities.AnimeActivity"
+    tools:context="com.demotxt.myapp.myapplication.Dashboardbmr.activities.AnimeActivity"
     android:background="#303030">
 
     <android.support.design.widget.AppBarLayout
