--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#813D7E</color>
+    <color name="colorPrimaryDark">#813D7E</color>
+    <color name="textColorPrimary">#0E0E0E</color>
+    <color name="windowBackground">#535252</color>
+    <color name="navigationBarColor">#000000</color>
+    <color name="colorAccent">#813D7E</color>
+    <color name="blue">#03A9F4</color>
+    <color name="colorPurple">#813D7E</color>
+    <color name="colorGrey">#A3A1A3</color>
+    <color name="colorDoctorName">#E4BFD7</color>
 </resources>
